--- a/MediaVoti/MediaVoti.csproj
+++ b/MediaVoti/MediaVoti.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Operazioni\Operazioni.csproj" />
+  </ItemGroup>
+
 </Project>
